objects/Books_Subscription__c.object
<CustomObject>
    <fields>
        <fullName>Due_Date__c</fullName>
        <formula>Issued_on__c + 14</formula>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issued_Book_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Issued Book Name</label>
        <referenceTo>Book__c</referenceTo>
        <relationshipLabel>Related Subscription</relationshipLabel>
        <relationshipName>Books_Subscription</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Issued_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the person whom the book is issued to</description>
        <label>Issued To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Books_Subscription</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Issued_on__c</fullName>
        <label>Issued on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Late_Fees_INR__c</fullName>
        <formula>IF( Return_Date__c &gt; Due_Date__c, (Return_Date__c - Due_Date__c)*1,0)</formula>
        <label>Late Fees (INR)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Return_Date__c</fullName>
        <label>Return Date</label>
        <type>Date</type>
    </fields>
    <label>Books Subscription</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Books Subscription Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Books Subscription</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>